--- a/views/home.html
+++ b/views/home.html
@@ -59,31 +59,29 @@
                 <hr>
                 <div class="article-box"> 
                     <div class="descripción-caja">
-                        <!--<li><span class="camion-verde"><i class="fas fa-truck"></i></span></li>-->
+                        <div class="camion-verde"><i class="fas fa-truck"></i></div>
                         <div class="div-descripcion">
-                            <p class="precio">$ 6.770</p>
+                            <p class="precio"><strong>$ 6.770</strong></p>
                             <p class="descuentos">40% OFF</p>
                         </div>
                         <p class="descripciones"><strong>Cafetera Moulinex</strong></p>
                       </div>  
                 </div>
             </article>
-            <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-macbook-pro-2019.jpg" alt="computadora">
                 <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
-                        <!--<li><span class="camion-verde"><i class="fas fa-truck"></i></span></li>-->
+                        <div class="camion-verde"><i class="fas fa-truck"></i></div>
                         <div class="div-descripcion">
-                        <p class="precio">$ 230.000</p>
+                        <p class="precio"><strong>$ 230.000</strong></p>
                         <p class="descuentos">20% OFF</p>
                         </div>
                         <p class="descripciones"><strong>MacBook Pro 2019</strong></p>
                     </div>
                 </div>
             </article>
-            <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-samsung-galaxy-s10.jpg" alt="celular">
                 <hr>
@@ -91,14 +89,13 @@
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck"></i></span></li>-->
                         <div class="div-descripcion">
-                        <p class="precio">$ 70.500</p>
+                        <p class="precio"><strong>$ 70.500</strong></p>
                         <p class="descuentos">10% OFF</p>
                         </div>
                         <p class="descripciones"><strong>Samsung Galaxy S10</strong></p>
                     </div>
                 </div>
             </article>
-            <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-tv-samsung-smart.jpg" alt="televisor">
                 <hr>
@@ -106,7 +103,7 @@
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
                         <div class="div-descripcion">
-                        <p class="precio">$ 23.200</p>
+                        <p class="precio"><strong>$ 23.200</strong></p>
                         <p class="descuentos">5% OFF</p>
                         </div>
                         <p class="descripciones"><strong>SmartTv Samsung 43"</strong></p>
@@ -114,7 +111,6 @@
                 </div>
             </article>
         </section>
-
         <section class= "section-display">
             <p class="titulares"><strong>Sección de Ofertas</strong></p>
             <article class="articulo-original">
@@ -124,14 +120,13 @@
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
                         <div class="div-descripcion">
-                        <p class="precio">$ 6.770</p>
+                        <p class="precio"><strong>$ 6.770</strong></p>
                         <p class="descuentos">40% OFF</p>
                         </div>
                         <p class="descripciones"><strong>Cafetera Moulinex</strong></p>
                     </div>
                 </div>
             </article>
-            <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-macbook-pro-2019.jpg" alt="computadora">
                 <hr>
@@ -139,14 +134,13 @@
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
                         <div class="div-descripcion">
-                        <p class="precio">$ 230.000</p>
+                        <p class="precio"><strong>$ 230.000</strong></p>
                         <p class="descuentos">20% OFF</p>
                         </div>
                         <p class="descripciones"><strong>MacBook Pro 2019</strong></p>
                     </div>
                 </div>
             </article>
-            <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-samsung-galaxy-s10.jpg" alt="celular">
                 <hr>
@@ -154,14 +148,13 @@
                     <div class="descripción-caja">
                         <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
                         <div class="div-descripcion">
-                        <p class="precio">$ 70.500</p>
+                        <p class="precio"><strong>$ 70.500</strong></p>
                         <p class="descuentos">10% OFF</p>
                         </div>
                         <p class="descripciones"><strong>Samsung Galaxy S10</strong></p>
                     </div>
                 </div>
             </article>
-            <br>
             <article class="articulo-original">
                 <img class="imagen-producto" src="/img/img-tv-samsung-smart.jpg" alt="televisor">
                 <hr>
@@ -169,7 +162,7 @@
                     <div class="descripción-caja">
                        <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
                         <div class="div-descripcion">
-                        <p class="precio">$ 23.200</p>
+                        <p class="precio"><strong>$ 23.200</strong></p>
                         <p class="descuentos">5% OFF</p>
                         </div>
                         <p class="descripciones"><strong>SmartTv Samsung 43</strong></p>
@@ -177,9 +170,7 @@
                 </div>
             </article>
         </section>
-
     </main>
-
     <footer>
         <section class="section-footer">
             <i class="fas fa-credit-card imagen"></i>
