--- a/views/home.html
+++ b/views/home.html
@@ -87,7 +87,7 @@
                 <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
-                        <!--<li><span class="camion-verde"><i class="fas fa-truck"></i></span></li>-->
+                        <div class="camion-verde"><i class="fas fa-truck"></i></div>
                         <div class="div-descripcion">
                         <p class="precio"><strong>$ 70.500</strong></p>
                         <p class="descuentos">10% OFF</p>
@@ -101,7 +101,7 @@
                 <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
-                        <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
+                        <div class="camion-verde"><i class="fas fa-truck delivery"></i></div>
                         <div class="div-descripcion">
                         <p class="precio"><strong>$ 23.200</strong></p>
                         <p class="descuentos">5% OFF</p>
@@ -118,7 +118,7 @@
                 <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
-                        <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
+                        <div class="camion-verde"><i class="fas fa-truck delivery"></i></div>
                         <div class="div-descripcion">
                         <p class="precio"><strong>$ 6.770</strong></p>
                         <p class="descuentos">40% OFF</p>
@@ -132,7 +132,7 @@
                 <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
-                        <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
+                        <div class="camion-verde"><i class="fas fa-truck delivery"></i></div>
                         <div class="div-descripcion">
                         <p class="precio"><strong>$ 230.000</strong></p>
                         <p class="descuentos">20% OFF</p>
@@ -146,7 +146,7 @@
                 <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
-                        <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
+                        <div class="camion-verde"><i class="fas fa-truck delivery"></i></div>
                         <div class="div-descripcion">
                         <p class="precio"><strong>$ 70.500</strong></p>
                         <p class="descuentos">10% OFF</p>
@@ -160,7 +160,7 @@
                 <hr>
                 <div class="article-box">
                     <div class="descripción-caja">
-                       <!--<li><span class="camion-verde"><i class="fas fa-truck delivery"></i></span></li>-->
+                       <div class="camion-verde"><i class="fas fa-truck delivery"></i></div>
                         <div class="div-descripcion">
                         <p class="precio"><strong>$ 23.200</strong></p>
                         <p class="descuentos">5% OFF</p>
